<resources>
    <string name="add_favorite">add_favorite</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="app_name">Katalog FIlm</string>
    <string name="movie">Movies</string>
    <string name="tvshow">Tv Show</string>
    <string name="favorite">Fav Movies</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="favorite_tvshow">Fav Tvshow</string>
    <string name="setting">Change Language Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_movie">Movie</string>
    <string name="description">Description</string>
    <string name="date">00/00/0000</string>
    <string name="rate">rate</string>
    <string name="kalender">Calender</string>
    <string name="poster_konten">Content Poster</string>
    <string name="star">star</string>
    <string name="favorite_movies">Fav Movies</string>
    <string name="oop_txt">Ooops... You don\'t have any favourite Movie :(</string>

</resources>
