<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_movie"
        android:title="@string/movie"
        android:enabled="true"
        android:icon="@drawable/movie"
        />
    <item
        android:id="@+id/action_tvshow"
        android:enabled="true"
        android:icon="@drawable/tv"
        android:title="@string/tvshow"
/>
    <item
        android:id="@+id/action_fav_movies"
        android:enabled="true"
        android:icon="@drawable/star"

 />
    <item
        android:id="@+id/action_fav_tvshows"
        android:title="@string/favorite_tvshow"
        android:enabled="true"
        android:icon="@drawable/star_added"

 />
</menu>