<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity.DetailTvshow">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/top_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/background_color"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">
            <ImageView
                android:id="@+id/image_tvshow"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/title_tvshow"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:elevation="2dp"
            android:padding="3dp"
            android:text="@string/txt_movie"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:fontFamily="serif"
            android:textSize="20sp"
            android:scaleType="fitXY"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/top_relative"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageRate"
            android:contentDescription="@string/kalender"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/star"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tvshow" />

        <TextView
            android:id="@+id/rate_tvshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/rate"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/imageRate"
            app:layout_constraintTop_toBottomOf="@+id/title_tvshow" />

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/star"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/kalender"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_tvshow" />

        <TextView
            android:id="@+id/calender_tvshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/rate_tvshow" />

        <TextView
            android:id="@+id/detail_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/description"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calender_tvshow" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>